test/isabelle/negative-tests/ulist.p
module UList {

    ul1 = ulist[1,2,2,3,3]


}